deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: node-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-web
  template:
    metadata:
      labels:
        app: node-web
    spec:
      containers:
      - name: node-app
        # SỬA Ở ĐÂY: Thay bằng domain thực tế của bạn
        image: nexus.tudaolw.io.vn:8085/my-node-app:latest 
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: nexus-secret # Tên này phải khớp với lệnh kubectl create secret bên dưới
