service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: node-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
