httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-app-http-route
  namespace: default
spec:
  parentRefs:
  - name: my-app-gateway
  hostnames:
  - "tudaolw.io.vn"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: my-app-service
      port: 80
